# urdf_update

src/combined_description/: CMakeLists.txt  package.xml
src/combined_description/launch/: combined_robot_launch.launch.py  combined_robot_launch.py  combined_robot_launch.xml
src/combined_description/rviz/: rviz.rviz  view.rviz
src/combined_description/urdf/: combined_robot.urdf.xacro
src/combined_robot_description/: CMakeLists.txt  package.xml
src/combined_robot_description/launch/: view_robot.launch.py
src/combined_robot_description/rviz/: view_robot.rviz
src/combined_robot_description/urdf/: combined_robot_description.urdf.xacro
src/component_models-main/: .gitlab-ci.yml
src/component_models-main/machines/codenser/codenser_description/: CMakeLists.txt  package.xml
src/component_models-main/machines/codenser/codenser_description/launch/: display.launch.py  gazebo.launch
src/component_models-main/machines/codenser/codenser_description/meshes/: gripper_left_link.STL
src/component_models-main/machines/codenser/codenser_description/rviz/: rviz_basic_settings.rviz
src/component_models-main/machines/codenser/codenser_description/urdf/: codenser.urdf  codenser.urdf.xacro  condenser.csv
src/component_models-main/machines/codenser/codenser_moveit_config_pkg/: .setup_assistant  CMakeLists.txt  package.xml
src/component_models-main/machines/codenser/codenser_moveit_config_pkg/config/: codenser.ros2_control.xacro  codenser.srdf  codenser.urdf.xacro  initial_positions.yaml  joint_limits.yaml  kinematics.yaml  moveit.rviz  moveit_controllers.yaml  ompl_planning.yaml  ros2_controllers.yaml
src/component_models-main/machines/codenser/codenser_moveit_config_pkg/launch/: demo.launch.py  moveit_rviz.launch.py  rsp.launch.py  spawn_controllers.launch.py  warehouse_db.launch.py
src/component_models-main/machines/codenser_double/codenser_double_description/: CMakeLists.txt  package.xml
src/component_models-main/machines/codenser_double/codenser_double_description/config/: joint_names_m_2025642_001.yaml
src/component_models-main/machines/codenser_double/codenser_double_description/launch/: display.launch.py
src/component_models-main/machines/codenser_double/codenser_double_description/meshes/: gripper_right_link.STL  wrist_link.STL
src/component_models-main/machines/codenser_double/codenser_double_description/urdf/: codenser_double.urdf  codenser_double.urdf.xacro
src/component_models-main/machines/codenser_double/codenser_double_moveit_config_pkg/: .setup_assistant  CMakeLists.txt  package.xml
src/component_models-main/machines/codenser_double/codenser_double_moveit_config_pkg/config/: codenser_double.ros2_control.xacro  codenser_double.srdf  codenser_double.urdf.xacro  initial_positions.yaml  joint_limits.yaml  kinematics.yaml  moveit.rviz  moveit_controllers.yaml  ompl_planning.yaml  ros2_controllers.yaml
src/component_models-main/machines/codenser_double/codenser_double_moveit_config_pkg/launch/: demo.launch.py  move_group.launch.py  setup_assistant.launch.py  static_virtual_joint_tfs.launch.py
src/component_models-main/std_components/m_2025642_001/m_2025642_001_description/: CMakeLists.txt  package.xml
src/component_models-main/std_components/m_2025642_001/m_2025642_001_description/config/: joint_names_m_2025642_001.yaml
src/component_models-main/std_components/m_2025642_001/m_2025642_001_moveit_config_pkg/: .setup_assistant  CMakeLists.txt  package.xml
src/component_models-main/std_components/m_2025643_001/m_2025643_001_description/: CMakeLists.txt  package.xml
src/component_models-main/std_components/m_2025643_001/m_2025643_001_moveit_config_pkg/: .setup_assistant  CMakeLists.txt  package.xml
src/component_models-main/std_components/m_2063306_000/m_2063306_000_description/: CMakeLists.txt  package.xml
src/component_models-main/std_components/m_2063306_000/m_2063306_000_moveit_config_pkg/: .setup_assistant  CMakeLists.txt  package.xml
src/component_models-main/std_components/m_2154940_001/m_2154940_001_description/: CMakeLists.txt  package.xml
src/component_models-main/std_components/m_4730788_001/m_4730788_001_description/: CMakeLists.txt  package.xml
src/component_models-main/std_components/m_4730788_001/m_4730788_001_description/launch/: display.launch  gazebo.launch
src/component_models-main/std_components/m_4730788_001/m_4730788_001_description/meshes/: base_link.STL  link_1.STL  link_2.STL
src/component_models-main/std_components/m_4730788_001/m_4730788_001_description/urdf/: m_4730788_001.csv  m_4730788_001.urdf  m_4730788_001.urdf.xacro
src/component_models-main/std_components/m_4730788_001/m_4730788_001_moveit_config_pkg/: .setup_assistant  CMakeLists.txt  package.xml
src/component_models-main/std_components/m_5326927_001/m_5326927_001_description/: CMakeLists.txt  package.xml
src/component_models-main/std_components/m_5326927_001/m_5326927_001_moveit_config_pkg/: .setup_assistant  CMakeLists.txt  package.xml
src/component_models-main/std_components/m_5326927_001/m_5326927_001_moveit_config_pkg/config/: initial_positions.yaml  joint_limits.yaml  kinematics.yaml  m_5326927_001.ros2_control.xacro  m_5326927_001.srdf  m_5326927_001.urdf.xacro  moveit.rviz  moveit_controllers.yaml  ros2_controllers.yaml
src/component_models-main/std_components/m_5326927_001/m_5326927_001_moveit_config_pkg/launch/: demo.launch.py  move_group.launch.py  moveit_rviz.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
src/kiwi_cell_description/urdf/: kiwi_cell.urdf.xacro
src/motoman_gp7_description/: CMakeLists.txt  package.xml
src/motoman_gp7_description/config/: view.rviz
src/motoman_gp7_description/launch/: view_gp7.launch.py
src/motoman_gp7_description/urdf/: gp7.xacro  gp7_macro.xacro
src/motoman_resources/: CMakeLists.txt  package.xml
src/robotiq_2f_85_gripper_visualization/: CMakeLists.txt  package.xml
src/robotiq_2f_85_gripper_visualization/launch/: view.launch.py
(+105 files in other folders)
