<package format="2">
  <name>combined_description</name>
  <version>0.0.1</version>
  <description>Combined description for Kiwi Cell and Motoman GP7</description>

  <maintainer email="your_email@domain.com">Your Name</maintainer>
  <license>Apache 2.0</license>

  <depend>xacro</depend>
  <depend>robot_state_publisher</depend>
  <depend>rviz2</depend>
  <depend>kiwi_cell_description</depend>
  <depend>motoman_gp7_description</depend>
  <depend>motoman_resources</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
