<?xml version="1.0"?>
<package format="3">
  <name>combined_robot_description</name>
  <version>0.0.1</version>
  <description>Combined Robot Description Package</description>
  <maintainer email="you@example.com">Your Name</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>xacro</build_depend>
  <build_depend>rclpy</build_depend>
  <build_depend>rosidl_default_generators</build_depend>

  <exec_depend>xacro</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>rviz2</exec_depend>
  
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
