<package format="3">
  <name>m_4730788_001_description</name>
  <version>1.0.0</version>
  <description>
    <p>URDF Description package for m_4730788_001</p>
    <p>This package contains configuration data, 3D models and launch files
for m_4730788_001 robot</p>
  </description>
  <author>TODO</author>
  <maintainer email="hsd@ipa.fraunhofer.de" />
  <license>BSD</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>joint_state_publisher_gui</depend>
  <depend>launch</depend>
  <depend>launch_ros</depend>
  <depend>robot_state_publisher</depend>
  <depend>urdf</depend>
  <depend>xacro</depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>